fixed overflowing issues, and made the utility areas/buttons sit irrespective of the canvas scroll position

--- a/public/stylesheets/canvasStyling.css
+++ b/public/stylesheets/canvasStyling.css
@@ -4,15 +4,29 @@ html {
   height: 100%;
 }
 
+#canvasContainer {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+
+    width: 100%;
+    height: 100%;
+    grid-column-start: 2;
+}
 /* Style the window itself */
 #canvasWindow {
-    position: static;
+    position: absolute;
     overflow: scroll;
+    top: 0px;
+    left: 0px;
+
+    height: 100%;
+    width:  100%;
 }
 
 /* Lets make the 'drawing canvas' some big block which is relatively positioned. */
 #drawingCanvas {
-    position: relative;
+    position: absolute;
     background-color : lightgrey;
 
     height : 3000px;    /* Make sure we have enough room for a ton of nodes and such! */
